--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
-    // console.log(inventors.map(fullName));
-    // function fullName(inventors) {
-    //     return [inventors.first, inventors.last].join(' ');
-    // }
+    console.log(inventors.map(fullName));
+    function fullName(inventors) {
+        return [inventors.first, inventors.last].join(' ');
+    }
+    
+    
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
 
