--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+    // Solution to string
     console.log(inventors.map(fullName));
     function fullName(inventors) {
         return [inventors.first, inventors.last].join(' ');
