--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    const totalYear = inventors.reduce((total, inventor) => total + (inventor.passed - inventor.year), 0);
+    console.log(totalYear);
 
     // 5. Sort the inventors by years lived
 
