--- a/index.html
+++ b/index.html
@@ -64,6 +64,13 @@
     console.log(totalYear);
 
     // 5. Sort the inventors by years lived
+    
+    const oldest = inventors.sort(function(a,b) {
+        const oldGuy = a.passed - a.year;
+        const youngGuy = b.passed - b.year;
+        return oldGuy > youngGuy ? -1 : 1;
+    });
+    console.log(oldest);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
