--- a/index.html
+++ b/index.html
@@ -78,7 +78,12 @@
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
-
+    const alpha = people.sort((firstOne, secondOne) => {
+        const [aFirst, aLast] = firstOne.split(', ');
+        const [bFirst, bLast] = secondOne.split(', ');
+        return aLast > bLast ? 1 : -1;
+    });
+    console.log(alpha);
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
