--- a/index.html
+++ b/index.html
@@ -87,6 +87,14 @@
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+    const transportation = data.reduce(function(obj, items){
+        if(!obj[items])
+        obj[items] = 0;
+
+        obj[items]++
+        return obj;
+    }, {});
+    console.log(transportation);
 
   </script>
 </body>
