--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     // 5. Sort the inventors by years lived
     
-    const oldest = inventors.sort(function(a,b) {
+    const oldest = inventors.sort((a,b) => {
         const oldGuy = a.passed - a.year;
         const youngGuy = b.passed - b.year;
         return oldGuy > youngGuy ? -1 : 1;
@@ -87,7 +87,7 @@
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
-    const transportation = data.reduce(function(obj, items){
+    const transportation = data.reduce((obj, items) => {
         if(!obj[items])
         obj[items] = 0;
 
