--- a/index.html
+++ b/index.html
@@ -45,23 +45,23 @@
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
     // Solution1 Mapping to string
-    console.log(inventors.map(fullName));
+    console.table(inventors.map(fullName));
     function fullName(inventors) {
         return [inventors.first, inventors.last].join(' ');
     }
      // Solution2 Mapping to Array
     const fullNames = inventors.map(inventor => `${inventor.first} ${inventor.last}`);
-    console.log(fullNames);
+    console.table(fullNames);
     
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
     const ordered = inventors.sort((a,b) => a.year > b.year ? 1 : -1);
-    console.log(ordered);
+    console.table(ordered);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
     const totalYear = inventors.reduce((total, inventor) => total + (inventor.passed - inventor.year), 0);
-    console.log(totalYear);
+    console.table(totalYear);
 
     // 5. Sort the inventors by years lived
     
@@ -70,7 +70,7 @@
         const youngGuy = b.passed - b.year;
         return oldGuy > youngGuy ? -1 : 1;
     });
-    console.log(oldest);
+    console.table(oldest);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
@@ -83,7 +83,7 @@
         const [bFirst, bLast] = secondOne.split(', ');
         return aLast > bLast ? 1 : -1;
     });
-    console.log(alpha);
+    console.table(alpha);
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
@@ -94,7 +94,7 @@
         obj[items]++
         return obj;
     }, {});
-    console.log(transportation);
+    console.table(transportation);
 
   </script>
 </body>
